--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
         </section>
         <section class="calc-buttons">
             <div class="calc-button-row">
-                <button class="calc-button-double">
-                    C
+                <button class="calc-button-double calc-button">
+                    AC
                 </button>
                 <button class="calc-button">
                     &larr;
                 </button>
-                <button class="calc-button">
+                <button class="calc-button calc-operator">
                     &divide;
                 </button>
             </div>
@@ -34,7 +34,7 @@
                 <button class="calc-button">
                     9
                 </button>
-                <button class="calc-button">
+                <button class="calc-button calc-operator">
                     &times;
                 </button>
             </div>
@@ -49,7 +49,7 @@
                 <button class="calc-button">
                     6
                 </button>
-                <button class="calc-button">
+                <button class="calc-button calc-operator">
                     &minus;
                 </button>
             </div>
@@ -64,7 +64,7 @@
                 <button class="calc-button">
                     3
                 </button>
-                <button class="calc-button">
+                <button class="calc-button calc-operator">
                     &plus;
                 </button>
             </div>
