реализация базового калькулятора с целыми числами

--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
         </section>
         <section class="calc-buttons">
             <div class="calc-button-row">
-                <button class="calc-button-double calc-button">
+                <button class="calc-button-double calc-button ac">
                     AC
                 </button>
-                <button class="calc-button">
+                <button class="calc-button-double calc-button">
                     &larr;
                 </button>
                 <button class="calc-button calc-operator">
@@ -70,7 +70,7 @@
             </div>
 
             <div class="calc-button-row">
-                <button class="calc-button">
+                <button class="calc-button-triple calc-button">
                     0
                 </button>
                 <button class="calc-button">
